k8s/app/auth-service/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: auth-service
spec:
  podSelector:
    matchLabels:
      app: auth-service
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: ingress-nginx
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: togglemaster-evaluation
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: togglemaster-flag
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: togglemaster-targeting
      ports:
        - protocol: TCP
          port: 8001
